# internal/billingconfig/billingconfigdb/models.go
@@ -1,0 +1,57 @@
+// Code generated by sqlc. DO NOT EDIT.
+// versions:
+//   sqlc v1.31.1
+
+package billingconfigdb
+
+import (
+	"time"
+
+	"github.com/shopspring/decimal"
+)
+
+type ChargeCode struct {
+	ID               int64
+	TenantID         int64
+	PropertyID       int64
+	Code             string
+	Name             string
+	ChargeType       string
+	PriceMode        string
+	DefaultUnitPrice *decimal.Decimal
+	IsSystem         bool
+	IsActive         bool
+	CreatedAt        time.Time
+	CreatedBy        *int64
+	UpdatedAt        time.Time
+	UpdatedBy        *int64
+}
+
+type ServiceCharge struct {
+	ID         int64
+	TenantID   int64
+	PropertyID int64
+	Code       string
+	Name       string
+	Rate       decimal.Decimal
+	IsActive   bool
+	CreatedAt  time.Time
+	CreatedBy  *int64
+	UpdatedAt  time.Time
+	UpdatedBy  *int64
+}
+
+type Tax struct {
+	ID           int64
+	TenantID     int64
+	PropertyID   int64
+	Code         string
+	Name         string
+	Rate         decimal.Decimal
+	TaxOnService bool
+	IsActive     bool
+	CreatedAt    time.Time
+	CreatedBy    *int64
+	UpdatedAt    time.Time
+	UpdatedBy    *int64
+}
